--- a/run-buddy style.css
+++ b/run-buddy style.css
@@ -5,12 +5,12 @@
   }
 
 body {
-    /* more on this crazy alphanumerical value in a minute! */
+    
     color: #39a6b2;
     font-family: Helvetica, Arial, sans-serif;
   }
 
-  /* apply styles to <header> */
+
 header {
     padding: 20px 35px;
     background-color: #39a6b2;
@@ -69,7 +69,6 @@ header {
     padding: 60px;
   }
 
-  /* Hero Style Start */
 .hero {
   background-image: url("hero-bg.jpg");
   height: 600px;
@@ -99,7 +98,6 @@ header {
   font-size: 16px;
 }
 
-/* Hero Style End */
 .form-input {
   border: 1px solid #024e76;
   display: block;
@@ -112,4 +110,26 @@ header {
 
 .hero-form label {
   margin: 0 5px;
+}
+
+.intro {
+  text-align: center;
+}
+
+.intro h2 {
+  font-size: 55px;
+  color: #024e76;
+  margin-bottom: 35px;
+  padding: 0 100px 20px 100px;
+  border-bottom: 3px solid;
+  border-color: #fce138;
+  display: inline-block;
+}
+
+.intro p {
+  line-height: 1.7;
+  color: #39a6b2;
+  width: 80%;
+  margin: 0 auto;
+  font-size: 20px;
 }
