--- a/assets/css/run-buddy style.css
+++ b/assets/css/run-buddy style.css
@@ -82,12 +82,20 @@ header {
   padding: 20px;
   width: 500px;
   color: #024e76;
-  border: solid 3px #024e76;
+  border: 3px solid #024e76;
   position: absolute;
   bottom: 120px;
   right: 140px;
+  
+}
+
+.hero-form h3 {
+  font-size: 24px;
+  margin: 0;
+}
+
+.hero-form p {
   margin: 5px 0 15px 0;
-  font-weight: bold;
 }
 
 .hero-form button {
@@ -217,4 +225,43 @@ header {
 .trainer-bio p {
   font-size: 17px;
   line-height: 1.3;
+}
+
+.contact {
+  text-align: center;
+  background: #024e76;
+}
+
+.contact h2 {
+  color: #fce138;
+}
+
+.contact-info iframe {
+  width: 400px;
+  height: 400px;
+}
+
+.contact-info div {
+  width: 410px;
+  display: inline-block;
+  vertical-align: top;
+  text-align: left;
+  margin: 30px 0 0 60px;
+  color: white;
+}
+
+.contact-info h3 {
+  color: #fce138;
+  font-size: 32px;
+}
+
+.contact-info p, .contact-info address {
+  margin: 20px 0;
+  line-height: 1.5;
+  font-size: 20px;
+  font-style: normal;
+}
+
+.contact-info a {
+  color: #fce138;
 }
