--- a/assets/css/secondary-styles.css
+++ b/assets/css/secondary-styles.css
@@ -26,23 +26,23 @@
 
   .secondary-content h3 {
       font-size: 25px;
-      margin: 20 0 20 0;
+      margin: 20 0;
 
   }
 
   .secondary-content p {
       font-size: 16px;
       line-height: 1.5;
-      margin: 20 0 20 0;
+      margin: 20 0;
 
   }
 
   .secondary-content ul {
-      margin: 15 20 15 20;
+      margin: 15 20;
 
   }
 
   .secondary-content li {
       color: #39a6b2;
-      margin: 10 0 10 0;
+      margin: 10 0;
   }
