added flexbox to header

--- a/assets/css/run-buddy style.css
+++ b/assets/css/run-buddy style.css
@@ -14,10 +14,12 @@ body {
 header {
     padding: 20px 35px;
     background-color: #39a6b2;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
   }
 
   header nav {
-    float: right;
     margin: 7px 0;
   }
 
@@ -35,7 +37,6 @@ header {
     font-size: 36px;
     color: #fce138;
     margin: 0;
-    display: inline;
   }
   
   header a {
