--- a/assets/css/run-buddy style.css
+++ b/assets/css/run-buddy style.css
@@ -87,6 +87,7 @@ header {
   color: #fff;
   font-size: 18px;
   line-height: 1.3;
+  position: absolute;
 }
 
 .hero-cta h2 {
@@ -102,8 +103,8 @@ header {
   color: #024e76;
   border: 3px solid #024e76;
   position: absolute;
-  bottom: 120px;
-  right: 140px;
+  bottom: 80px;
+  right: 120px;
   width: 40%;
   margin: 3.5%;
   
@@ -140,20 +141,11 @@ header {
   margin: 0 5px;
 }
 
-.intro {
-  text-align: center;
-}
-
 .intro p {
-  line-height: 1.7;
-  color: #39a6b2;
-  width: 80%;
-  margin: 0 auto;
-  font-size: 20px;
+  text-align: center;
 }
 
 .steps {
-  text-align: center;
   background: #fce138;
 }
 
@@ -184,10 +176,11 @@ header {
 .section-title {
   font-size: 55px;
   color: #024e76;
-  margin-bottom: 35px;
-  padding: 0 100px 20px 100px;
-  display: inline-block;
   border-bottom: 3px solid;
+  padding-bottom: 20px;
+  text-align: center;
+  margin: 0 auto 35px auto;
+  width: 50%;
 }
 
 .primary-border {
@@ -199,7 +192,6 @@ header {
 }
 
 .trainers {
-  text-align: center;
 }
 
 .trainer {
@@ -229,6 +221,10 @@ header {
 
 .text-right {
   text-align: right;
+}
+
+.flex-row {
+  display: flex;
 }
 
 .trainer-bio h3 {
