--- a/assets/css/run-buddy style.css
+++ b/assets/css/run-buddy style.css
@@ -70,7 +70,7 @@ header {
   }
 
 .hero {
-  background-image: url("../images/hero-bg.jpg");
+  background-image: url("../images/flipped-hero-image");
   height: 600px;
   background-size: cover;
   background-position: center;
