--- a/assets/css/run-buddy style.css
+++ b/assets/css/run-buddy style.css
@@ -1,7 +1,7 @@
 :root {
   --primary-color: #fce138;
   --secondary-color: #024e76;
-  --tertiary-color: v#39a6b2;
+  --tertiary-color: #39a6b2;
 }
 
 * {
@@ -24,16 +24,14 @@ header {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  position: -webkit-sticky;
   position: sticky;
+  position: -webkit-sticky;
   top: 0;
-  background-image: url('../images/flipped-hero-image.jpg');
+  background-image: url("../images/hero-bg.jpg");
   background-size: cover;
-  background-position: center;
   background-attachment: fixed;
   background-position: 80%;
   z-index: 9999;
-
 }
 
 header h1 {
@@ -74,6 +72,7 @@ header nav ul li a:hover {
   border-radius: 15px;
   text-shadow: none;
 }
+
 /* HEADER / NAVBAR STYLES END */
 
 
@@ -113,7 +112,6 @@ section {
 .hero {
   background-image: url('../images/flipped-hero-image.jpg');
   background-size: cover;
-  background-position: center;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -140,13 +138,13 @@ section {
 
 .hero-form {
   border: 3px solid var(--secondary-color);
-  background-color: rgba(252, 225, 56, 0.8);
+  background-color: rgba(255, 225, 56, 0.8);
   padding: 20px;
   color: var(--secondary-color);
   width: 40%;
   margin: 3.5%;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   border-radius: 15px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .hero-form button:hover {
@@ -219,8 +217,8 @@ section {
 
 .radio-wrapper label::after {
   content: "";
-  width: 20px;
   height: 20px;
+  width: 20px;
   border-radius: 50%;
   background: var(--secondary-color);
   position: absolute;
@@ -250,7 +248,6 @@ section {
 .radio-wrapper input:checked + label::after {
   content: "";
 }
-
 /* HERO STYLES END */
 
 
@@ -275,7 +272,6 @@ section {
 /* SECTION TITLE STYLES END */
 
 /* WHAT WE DO STYLES */
-
 .intro p {
   line-height: 1.7;
   color: var(--tertiary-color);
@@ -291,7 +287,6 @@ section {
 .steps { 
   background: var(--primary-color);
 }
-/* SECTION TITLE STYLES END */
 
 .step {
   margin: 50px auto;
@@ -303,12 +298,8 @@ section {
   justify-content: space-between;
 }
 
-.step:nth-child(even) {
-  border-bottom: 1px solid var(--tertiary-color);
-}
-
-.step:not(:last-child) {
-  border-bottom: 1px solid var(--tertiary-color);
+.step:last-child {
+  border-bottom: none;
 }
 
 .step h3 {
@@ -347,73 +338,6 @@ section {
   line-height: 1.5;
   color: var(--secondary-color);
 }
-
-/* WHAT YOU DO STYLES END */
-
-/* MEET THE TRAINERS START */
-.trainers {
-  width: 100%;
-  margin: 0 auto;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-}
-/* WHAT YOU DO STYLES END */
-
-
-/* WHAT YOU DO STYLES START */
-.steps { 
-  background: #fce138;
-}
-
-.step {
-  margin: 50px auto;
-  padding-bottom: 50px;
-  width: 80%;
-  border-bottom: 1px solid #39a6b2;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.step h3 {
-  color: #024e76;
-  font-size: 46px;
-  flex: 1 30%;
-}
-
-.step-info {
-  flex: 2 70%;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-}
-
-.step-img {
-  flex: 1 12%;
-  margin-right: 20px;
-}
-
-.step-img img {
-  max-width: 100%;
-}
-
-.step-text {
-  flex: 12;
-}
-
-.step-text p {
-  color: #39a6b2;
-  font-size: 18px;
-}
-
-.step-text h4 {
-  font-size: 26px;
-  line-height: 1.5;
-  color: #024e76;
-}
-
 /* WHAT YOU DO STYLES END */
 
 /* MEET THE TRAINERS START */
@@ -511,26 +435,28 @@ section {
 
 .contact-form input:focus, .contact-form textarea:focus {
   background-color: rgba(255,255,255, 1);
+  outline: none;
 }
 
 .contact-form button {
   width: 100%;
-  background-color: var(--primary-color);
+  border: none;
+  background: var(--primary-color);
+  color: var(--secondary-color);
   text-align: center;
-  text-decoration: var(--secondary-color) ;
   padding: 15px 0;
   font-size: 16px;
   border-radius: 10px;
 }
 
 .contact-form button:hover {
-  background-color: var(--tertiary-color);  
+  color: var(--primary-color);
+  background: var(--tertiary-color);
 }
+
 .contact-info a {
   color: var(--primary-color);
 }
-
-
 /* REACH OUT STYLES END */
 
 /* UTILITIES */
@@ -622,8 +548,11 @@ section {
   .step-text {
     flex: 100%;  
   }
+
+  .trainer-bio h3, .trainer-bio h4 {
+    display: block;
+  }
 }
-/* TRAINER STYLES END */
 
 /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
 @media screen and (max-width: 575px) {
